[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/youmu.png" type="Texture" id=1]
[ext_resource path="res://Youmu.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://sfx/get_hit.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 29 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 29 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 29 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 29 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 10.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 125, 119 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 85, 80 )

[node name="Youmu" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -0.5 )
shape = SubResource( 4 )

[node name="PlayerIndicator" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerIndicator"]
shape = SubResource( 5 )

[node name="DangerIndicator" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerIndicator"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="HPcount" type="Label" parent="."]
margin_left = -26.0
margin_top = -32.0
margin_right = -4.0
margin_bottom = -14.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.886275, 0.290196, 0.290196, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "H"

[node name="AudioHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="tree_exiting" from="." to="." method="_on_Fairy1_tree_exiting"]
[connection signal="body_entered" from="PlayerIndicator" to="." method="_on_PlayerIndicator_body_entered"]
[connection signal="body_exited" from="PlayerIndicator" to="." method="_on_PlayerIndicator_body_exited"]
[connection signal="body_entered" from="DangerIndicator" to="." method="_on_DangerIndicator_body_entered"]
[connection signal="body_exited" from="DangerIndicator" to="." method="_on_DangerIndicator_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
